# Polynomials

./: CMakeLists.txt  README.md
include/: DataBase.h  List.h  Polynomial.h  StateMachine.h  Window.h  logger.h
src/: DataBase.cpp  Polynomial.cpp  StateMachine.cpp  Window.cpp  logger.cpp  main.cpp
